--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -945,6 +945,19 @@
   timestamp = {2010.06.03},
 }
 
+@InProceedings{Albrecht1956,
+  author    = {Albrecht, M. C.},
+  title     = {Does Literature Reflect Common Values?},
+  booktitle = {American Sociological Review},
+  year      = {1956},
+  volume    = {21},
+  number    = {6},
+  pages     = {722-729},
+  doi       = {10.2307/2088424},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @Book{Albrecht2005,
   title     = {Social Intelligence: The New Science of Success},
   publisher = {Wiley},
@@ -2111,6 +2124,16 @@
   url       = {https://www.jstor.org/stable/j.ctt3fgz26},
 }
 
+@Book{Auerbach2003,
+  title     = {Mimesis: The Representation of Reality in Western Literature},
+  publisher = {Princeton University Press},
+  year      = {2003},
+  author    = {Auerbach, E.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.jstor.org/stable/j.ctt3fgz26},
+}
+
 @Article{Auger2008,
   author    = {Auger, E. E.},
   title     = {The lord of the rings' interlace: Tolkien's narrative and Lee's illustrations},
@@ -3028,6 +3051,19 @@
   timestamp = {2022.06.22},
 }
 
+@Article{Barnett1948,
+  author    = {Barnett, J. H. and Gruen, R.},
+  title     = {Recent American Divorce Novels, 1938-1945: A Study in the Sociology of Literature},
+  journal   = {Social Forces},
+  year      = {1948},
+  volume    = {26},
+  number    = {3},
+  pages     = {322-327},
+  doi       = {10.2307/2572056},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @Article{Baronchelli2013,
   author    = {Baronchelli, A. and Ferrer-i-Cancho, R. and Pastor-Satorras, R. and Chater, N. and Christiansen, M. H.},
   title     = {Networks in Cognitive Science},
@@ -3754,6 +3790,16 @@
   url       = {https://dl.acm.org/citation.cfm?id=1625275.1625385},
 }
 
+@Book{Bel2010,
+  title     = {Women’s Writing from the Low Countries 1880–2010: An Anthology},
+  publisher = {Amsterdam University Press},
+  year      = {2010},
+  author    = {Bel, J. and Vaessens, T.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.aup.nl/en/book/9789089641298/women-s-writing-from-the-low-countries-1200-1875},
+}
+
 @Article{Belfiore2000,
   author    = {Belfiore, E.},
   title     = {Narratological plots and aristotle's mythos},
@@ -3981,6 +4027,19 @@
   url          = {http://kirellbenzi.com/blog/exploring-the-star-wars-expanded-universe-part-2/},
   owner        = {Vincent},
   timestamp    = {2016.02.23},
+}
+
+@Article{Berelson1946,
+  author    = {Berelson, B. and Salter, P. J.},
+  title     = {Majority and Minority Americans: An Analysis of Magazine Fiction},
+  journal   = {Public Opinion Quarterly},
+  year      = {1946},
+  volume    = {10},
+  number    = {2},
+  pages     = {168-190},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.jstor.org/stable/2745610},
 }
 
 @Article{Berezkin2010,
@@ -8548,6 +8607,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.aclweb.org/anthology/W16-0509.pdf},
 }
 
+@Article{Chen2016a,
+  author    = {Chen, Y. and Volker, B.},
+  title     = {Social capital and homophily both matter for labor market outcomes {\textendash} evidence from replication and extension},
+  journal   = {Social Networks},
+  year      = {2016},
+  volume    = {45},
+  pages     = {18-31},
+  doi       = {10.1016/j.socnet.2015.10.003},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @InProceedings{Chen2016h,
   author    = {Chen, H. Y. and Choi, J. D.},
   title     = {Character Identification on Multiparty Conversation: Identifying Mentions of Characters in TV Shows},
@@ -9709,6 +9780,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://dl.acm.org/doi/10.5555/2384179.2384187},
 }
 
+@Book{Collins2008,
+  title     = {Black Feminist Thought: Knowledge, Consciousness, and the Politics of Empowerment},
+  publisher = {Routledge},
+  year      = {2008},
+  author    = {Collins, P. H.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.routledge.com/Black-Feminist-Thought-Knowledge-Consciousness-and-the-Politics-of-Empowerment/Collins/p/book/9780415964722},
+}
+
 @InProceedings{Collins2009,
   author    = {Collins, C. and Viegas, F. B. and Wattenberg, M.},
   title     = {Parallel Tag Clouds to explore and analyze faceted text corpora},
@@ -10514,6 +10595,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.3115/1218955.1219009},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Culpeper2000,
+  author    = {Culpeper, J.},
+  title     = {A cognitive approach to characterization: Katherina in Shakespeare's The Taming of the Shrew},
+  journal   = {Language and Literature},
+  year      = {2000},
+  volume    = {9},
+  number    = {4},
+  pages     = {291-316},
+  doi       = {10.1177/096394700000900401},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
 }
 
 @Book{Cunningham2000,
@@ -13897,6 +13991,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.07.08},
 }
 
+@Article{English2010,
+  author    = {English, J. F.},
+  title     = {Everywhere and Nowhere: The Sociology of Literature After ``the Sociology of Literature''},
+  journal   = {New Literary History},
+  year      = {2010},
+  volume    = {41},
+  number    = {2},
+  pages     = {v-xxiii},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.jstor.org/stable/40983820},
+}
+
 @Article{Entman1989,
   author    = {Entman, R. M.},
   title     = {How the Media Affect What People Think: An Information Processing Approach},
@@ -14763,6 +14870,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://www.jstor.org/stable/25595909},
+}
+
+@Book{Felski2015,
+  title     = {The Limits of Critique},
+  publisher = {University of Chicago Press},
+  year      = {2015},
+  author    = {Felski, R.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/L/bo21386290.html},
 }
 
 @InProceedings{Felzenszwalb2008,
@@ -16781,6 +16898,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.08.31},
 }
 
+@Book{Gebauer1995,
+  title     = {Mimesis: Culture, Art, Society},
+  publisher = {University of California Press},
+  year      = {1995},
+  author    = {Gebauer, G. and Wulf, C.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.ucpress.edu/book/9780520084599/mimesis},
+}
+
 @InProceedings{Gehrmann2021,
   author    = {Gehrmann, S. and Adewumi, T. and Aggarwal, K. and Ammanamanchi, P. S. and Aremu, A. and Bosselut, A. and Chandu, K. R. and Clinciu, M.-A. and Das, D. and Dhole, K. and Du, W. and Durmus, E. and Dušek, O. and Chinenye Emezue, C. and Gangal, V. and Garbacea, C. and Hashimoto, T. and Hou, Y. and Jernite, Y. and Jhamtani, H. and Ji, Y. and Jolly, S. and Kale, M. and Kumar, D. and Ladhak, F. and Madaan, A. and Maddela, M. and Mahajan, K. and Mahamood, S. and Majumder, B. P. and Martins, P. H. and McMillan-Major, A. and Mille, S. and van Miltenburg, E. and Nadeem, M. and Narayan, S. and Nikolaev, V. and Niyongabo Rubungo, A. and Osei, S. and Parikh, A. and Perez-Beltrachini, L. and Rao, N. R. and Raunak, V. and Rodriguez, J. D. and Santhanam, S. and Sedoc, J. and Sellam, T. and Shaikh, S. and Shimorina, A. and Sobrevilla Cabezudo, M. .A and Strobelt, H. and Subramani, N. and Xu, W. and Yang, D. and Yerukola, A. and Zhou, J.},
   title     = {The {GEM} Benchmark: Natural Language Generation, its Evaluation and Metrics},
@@ -17385,6 +17512,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.07.08},
 }
 
+@Book{Glenn2002,
+  title     = {Female Spectacle: The Theatrical Roots of Modern Feminism},
+  publisher = {Harvard University Press},
+  year      = {2002},
+  author    = {Glenn, S. A.},
+  doi       = {10.2307/j.ctv1dhph8p},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @InProceedings{Gloor2004,
   author    = {Gloor, P. A. and Zhao, Y.},
   title     = {Tecflow-a temporal communication flow visualizer for social networks analysis},
@@ -17861,6 +17998,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.08.21},
 }
 
+@Article{Govindan1990,
+  author    = {Govindan, V. K. and Shivaprasad, A. P.},
+  title     = {Character recognition - A review},
+  journal   = {Pattern Recognition},
+  year      = {1990},
+  volume    = {23},
+  number    = {7},
+  pages     = {671-683},
+  doi       = {10.1016/0031-3203(90)90091-x},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @Article{Gower1969,
   author    = {Gower, J. C. and Ross, G. J. S.},
   title     = {Minimum spanning trees and single linkage cluster analysis},
@@ -18206,6 +18356,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.routledge.com/Miltons-Ovidian-Eve/Green/p/book/9780754666660},
 }
 
+@Book{Greenblatt2005,
+  title     = {The Greenblatt Reader},
+  publisher = {Wiley-Blackwell},
+  year      = {2005},
+  author    = {Greenblatt, S.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.wiley.com/en-us/The+Greenblatt+Reader-p-9781405115667},
+}
+
 @Book{Greenblatt2013,
   title     = {Hamlet in purgatory},
   publisher = {Princeton University Press},
@@ -18214,6 +18374,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://press.princeton.edu/titles/10108.html},
+}
+
+@Book{Greene1991,
+  title     = {Changing the Story: Feminist Fiction and the Tradition},
+  publisher = {Indiana University Press},
+  year      = {1991},
+  author    = {Greene, G.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://books.google.fr/books/?id=06PlCALK59cC},
 }
 
 @Article{Greene2000,
@@ -21170,6 +21340,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2014.06.24},
 }
 
+@InCollection{Horkheimer2017,
+  author    = {Horkheimer, M. and Adorno, T. W.},
+  title     = {The culture industry: Enlightenment as mass deception},
+  booktitle = {Karl Marx},
+  publisher = {Routledge},
+  year      = {2017},
+  pages     = {405-424},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.marxists.org/reference/archive/adorno/1944/culture-industry.htm},
+}
+
 @Book{Horn1985,
   title     = {Matrix Analysis},
   publisher = {Cambridge University Press},
@@ -21732,6 +21914,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.25},
 }
 
+@Book{Hunt2007,
+  title     = {Inventing Human Rights: A History},
+  publisher = {Norton},
+  year      = {2007},
+  author    = {Hunt, L.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://wwnorton.com/books/Inventing-Human-Rights/},
+}
+
 @InCollection{Hunter1976,
   author    = {Hunter, G. K.},
   title     = {Were there Act-Pauses on Shakespeare's Stage?},
@@ -21929,6 +22121,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icc.2011.5963147},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Inglis1938,
+  author    = {Inglis, R. A.},
+  title     = {An Objective Approach to the Relationship Between Fiction and Society},
+  journal   = {American Sociological Review},
+  year      = {1938},
+  volume    = {3},
+  number    = {4},
+  pages     = {526},
+  doi       = {10.2307/2083900},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
 }
 
 @Book{Inness2004,
@@ -22656,9 +22861,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle = {4th Workshop on Computational Linguistics for Literature},
   year      = {2015},
   pages     = {32-41},
+  doi       = {10.3115/v1/w15-0704},
   owner     = {Vincent},
   timestamp = {2017.04.27},
-  url       = {http://anthology.aclweb.org/W/W15/W15-07.pdf#page=46},
 }
 
 @Book{Jeffers2005,
@@ -24009,6 +24214,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://ur.booksc.eu/book/39984673/1bfd88},
+}
+
+@InCollection{Kelly2010,
+  author    = {Kelly, A.},
+  title     = {David FosterWallace and the new sincerity in American fiction},
+  booktitle = {Consider David Foster Wallace: Critical Essays},
+  publisher = {SSMG Press},
+  year      = {2010},
+  pages     = {131-146},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://pure.york.ac.uk/portal/en/publications/david-foster-wallace-and-the-new-sincerity-in-american-fiction},
 }
 
 @TechReport{Kelsall2004,
@@ -26704,6 +26921,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://ijoc.org/index.php/ijoc/article/view/1094},
+}
+
+@Article{Laughlin2010,
+  author    = {Laughlin, K. and Gallagher, J. and Cobble, D. and Boris, E. abd Nadasen, P. and Gilmore, S. and Zarnow, L.},
+  title     = {Is it time to jump ship? Historians rethink the waves metaphor},
+  journal   = {Feminist Formations},
+  year      = {2010},
+  volume    = {22},
+  number    = {1},
+  pages     = {76-135},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.jstor.org/stable/40835345},
 }
 
 @Article{Lauwers2015,
@@ -29788,6 +30018,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@Article{Lynch2016,
+  author    = {Lynch, T. and Tompkins, J. E. and van Driel, I. I. and Fritz, N.},
+  title     = {Sexy, Strong, and Secondary: A Content Analysis of Female Characters in Video Games across 31 Years},
+  journal   = {Journal of Communication},
+  year      = {2016},
+  volume    = {66},
+  number    = {4},
+  pages     = {564-584},
+  doi       = {10.1111/jcom.12237},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @Book{Lynn2003,
   title     = {Navan Fort: Archaeology and Myth},
   publisher = {Wordwell},
@@ -30444,6 +30687,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@Article{Mann2005,
+  author    = {Mann, S. A. and Huffman, D. J.},
+  title     = {The Decentering of Second Wave Feminism and the Rise of the Third Wave},
+  journal   = {Science \& Society},
+  year      = {2005},
+  volume    = {69},
+  number    = {1},
+  pages     = {56-91},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.jstor.org/stable/40404229},
+}
+
 @Book{Manning1999,
   title     = {Foundations of Statistical Natural Language Processing},
   publisher = {MIT Press},
@@ -30810,6 +31066,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/2095397},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Marsden1988,
+  author    = {Marsden, P. V.},
+  title     = {Homogeneity in confiding relations☆},
+  journal   = {Social Networks},
+  year      = {1988},
+  volume    = {10},
+  number    = {1},
+  pages     = {57-76},
+  doi       = {10.1016/0378-8733(88)90010-X},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
 }
 
 @Article{Marsden1990,
@@ -32994,6 +33263,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.13},
 }
 
+@InCollection{Moi2019,
+  author    = {Moi, T.},
+  title     = {Rethinking character},
+  booktitle = {Character},
+  publisher = {University of Chicago Press},
+  year      = {2019},
+  doi       = {10.7208/9780226658834-002},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @Article{Molina-Guzman2016,
   author    = {Molina-Guzmán, I.},
   title     = {\#{OscarsSoWhite}: how Stuart Hall explains why nothing changes in Hollywood and everything is changing},
@@ -33253,6 +33533,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/cogs.12013},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Book{Moraru2011,
+  title     = {Cosmodernism: American Narrative, Late Globalization, and the New Cultural Imaginary .},
+  publisher = {University of Michigan Press},
+  year      = {2011},
+  author    = {Moraru, C.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.press.umich.edu/1594635/cosmodernism},
+}
+
+@Article{Moravec2021,
+  author    = {Moravec, M. and Chang, K. K.},
+  title     = {Feminist bestsellers: A digital history of 1970s feminism},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2021},
+  volume    = {1},
+  number    = {1},
+  pages     = {22333},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://post45.org/2021/04/feminist-bestsellers-a-digital-history-of-1970s-feminism/},
 }
 
 @Book{Moreno1934,
@@ -37014,6 +37317,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@Article{Pennell2015,
+  author    = {Pennell, H. and Behm-Morawitz, E.},
+  title     = {The empowering (super) heroine? The effects of sexualized female characters in superhero films on women},
+  journal   = {Sex Roles},
+  year      = {2015},
+  volume    = {72},
+  pages     = {211-220},
+  doi       = {10.1007/s11199-015-0455-3},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @InProceedings{Pennington2014,
   author    = {Pennington, J. and Socher, R. and Manning, C.},
   title     = {Glove: Global vectors for word representation},
@@ -37250,6 +37565,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/srep00943},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@PhdThesis{Petersen2012a,
+  author    = {Petersen, R.},
+  title     = {Criminal Network Investigation: Processes, Tools, and Techniques},
+  school    = {University of Southern Denmark},
+  year      = {2012},
+  type      = {PhD. Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://portal.findresearcher.sdu.dk/en/publications/criminal-network-investigation-processes-tools-and-techniques},
 }
 
 @Article{Peterson2009,
@@ -37983,6 +38309,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-10599-4_35},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@Book{Potolsky2006,
+  title     = {Mimesis},
+  publisher = {Routledge},
+  year      = {2006},
+  author    = {Potolsky, M.},
+  series    = {The New Critical Idiom},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.routledge.com/Mimesis/Potolsky/p/book/9780415700306},
 }
 
 @InProceedings{Poudat2003,
@@ -39241,6 +39578,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.09},
   url       = {https://books.google.fr/books?id=E_DDAgAAQBAJ},
+}
+
+@InCollection{Reicher2010,
+  author    = {Reicher, M. E.},
+  title     = {The ontology of fictional character},
+  booktitle = {Characters in Fictional Worlds: Understanding Imaginary Beings in Literature, Film, and Other Media},
+  publisher = {de Gruyter},
+  year      = {2010},
+  pages     = {111-133},
+  doi       = {10.1515/9783110232424.2.111},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
 }
 
 @InProceedings{Reimers2019,
@@ -41850,6 +42199,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.22},
 }
 
+@Book{Schaub2013,
+  title     = {Middlebrow Feminism in Classic British Detective Fiction: The Female Gentleman},
+  publisher = {Springer},
+  year      = {2013},
+  author    = {Schaub, M.},
+  doi       = {10.1057/9781137276964},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
 @Book{Scherer1959,
   title     = {La dramatugie classique en France},
   publisher = {Nizet},
@@ -43122,6 +43481,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@PhdThesis{Shannon1997,
+  author    = {Shannon, E. A.},
+  title     = {The influence of feminism on public policy abortion and equal pay in Australia and the Republic of Ireland},
+  school    = {University of Tasmania},
+  year      = {1997},
+  type      = {PhD. Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://eprints.utas.edu.au/2038/},
+}
+
 @Article{Shannon2003,
   author    = {Shannon, P.},
   title     = {Cytoscape: A Software Environment for Integrated Models of Biomolecular Interaction Networks},
@@ -43373,6 +43743,26 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/01639374.2019.1653413},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Book{Showalter1977,
+  title     = {A Literature of Their Own: British Women Novelists from Bronte to Lessing},
+  publisher = {Princeton University Press},
+  year      = {1977},
+  author    = {Showalter, E.},
+  doi       = {10.2307/j.ctv173f0v7},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
+@Book{Showalter2009,
+  title     = {A Jury of Her Peers: American Women Writers from Anne Bradstreet to Annie Proulx},
+  publisher = {Virago Press},
+  year      = {2009},
+  author    = {Showalter, E.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://books.google.fr/books/?id=743tTHz58l8C},
 }
 
 @Article{Shroff2010,
@@ -43856,6 +44246,27 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.22148/001c.24722},
   owner     = {Vincent},
   timestamp = {2021.06.19},
+}
+
+@Book{Smeets2021a,
+  title     = {Character Constellations: Representations of Social Groups in Present-Day Dutch Literary Fiction},
+  publisher = {Leuven University Press},
+  year      = {2021},
+  author    = {Smeets, R.},
+  doi       = {10.2307/j.ctv21wj5cb},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+}
+
+@Book{Smeets2022,
+  title     = {Actual Fictions: Literary Representation and Character Network Analysis},
+  publisher = {Cambridge University Press},
+  year      = {2022},
+  author    = {Smeets, R.},
+  series    = {Elements in Digital Literary Studies},
+  doi       = {10.1017/9781009180788},
+  owner     = {Vincent},
+  timestamp = {2022.11.02},
 }
 
 @Book{Smiley2000,
@@ -44499,6 +44910,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.09},
   url       = {https://wordsworth-editions.com/author/spinoza-benedict},
+}
+
+@Book{Spivak1990,
+  title     = {The Post-Colonial Critic: Interviews, Strategies, Dialogues},
+  publisher = {Routledge},
+  year      = {1990},
+  author    = {Spivak, G.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://www.routledge.com/The-Post-Colonial-Critic-Interviews-Strategies-Dialogues/Spivak-Harasym/p/book/9780415901703},
 }
 
 @Article{Sporns2000,
@@ -49214,6 +49635,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3301275.3302302},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@Book{Watt1960,
+  title     = {The Rise of the Novel: Studies in Defoe, Richardson and Fielding},
+  publisher = {University of California Press},
+  year      = {1960},
+  author    = {Watt, I.},
+  owner     = {Vincent},
+  timestamp = {2022.11.15},
+  url       = {https://books.google.fr/books/?id=MH3vrB2Kq7QC},
 }
 
 @Electronic{Wattenberg2007,
