--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3138,6 +3138,16 @@
   timestamp = {2020.11.30},
 }
 
+@Book{Barry2004,
+  title     = {The Paradox of Choice: Why More is Less},
+  publisher = {Ecco Press},
+  year      = {2004},
+  author    = {Barry, S.},
+  owner     = {Vincent},
+  timestamp = {2022.11.26},
+  url       = {https://books.google.fr/books/?id=g422yyua-P8C},
+}
+
 @InProceedings{Barth2018,
   author    = {Barth, F. and Kim, E. and Murr, S. and Klinger, R.},
   title     = {A reporting tool for relational visualization and analysis of character mentions in literature},
@@ -14397,6 +14407,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.07.08},
 }
 
+@Article{Everett2014,
+  author    = {Everett, M. G. and Borgatti, S. P.},
+  title     = {Networks containing negative ties},
+  journal   = {Social Networks},
+  year      = {2014},
+  volume    = {38},
+  pages     = {111-120},
+  doi       = {10.1016/j.socnet.2014.03.005},
+  owner     = {Vincent},
+  timestamp = {2015.11.07},
+}
+
 @Article{Everett2018,
   author    = {Everett, M. G. and Broccatelli, C. and Borgatti, S. P. and Koskinen, J.},
   title     = {Measuring knowledge and experience in two mode temporal networks},
@@ -18276,6 +18298,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2017.11.27},
   url       = {https://books.google.fr/books?id=Z8xXAAAAYAAJ},
+}
+
+@Article{Graves2007,
+  author    = {Graves, M. and Constabaris, A. and Brickley, D.},
+  title     = {{FOAF}: Connecting People on the Semantic Web},
+  journal   = {Cataloging \& Classification Quarterly},
+  year      = {2007},
+  volume    = {43},
+  number    = {3-4},
+  pages     = {191-202},
+  doi       = {10.1300/j104v43n03_10},
+  owner     = {Vincent},
+  timestamp = {2022.11.26},
 }
 
 @Article{Gravino2012,
@@ -22485,6 +22520,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh2017.adho.org/abstracts/002/002.pdf},
 }
 
+@Article{Jaerv2020,
+  author    = {Järv, R.},
+  title     = {Character networks in two books about {Reynard the Fox}},
+  journal   = {Methis: Studia humaniora Estonica},
+  year      = {2020},
+  volume    = {21},
+  number    = {26},
+  doi       = {10.7592/methis.v21i26.16915},
+  owner     = {Vincent},
+  timestamp = {2022.11.24},
+}
+
 @Book{Jagoda2016,
   title     = {Network Aesthetics},
   publisher = {University of Chicago Press},
@@ -24070,6 +24117,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/20107058},
 }
 
+@Article{Kaur2015,
+  author    = {Kaur, M. and Singh, S.},
+  title     = {Analyzing negative ties in social networks: A survey},
+  journal   = {Egyptian Informatics Journal},
+  year      = {2016},
+  volume    = {17},
+  number    = {1},
+  pages     = {21-43},
+  doi       = {10.1016/j.eij.2015.08.002},
+  owner     = {Vincent},
+  timestamp = {2015.11.07},
+}
+
 @Article{Kayastha2011,
   author    = {Kayastha, N. and Niyato, D. and Wang, P. and Hossain, E.},
   title     = {Applications, Architectures, and Protocol Design Issues for Mobile Social Networks: A Survey},
@@ -24385,6 +24445,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{Kernighan1970,
+  author    = {Kernighan, B. W. and Lin, S.},
+  title     = {An efficient heuristic procedure for partitioning graphs},
+  journal   = {Bell System Technical Journal},
+  year      = {1970},
+  volume    = {49},
+  number    = {2},
+  pages     = {291-307},
+  doi       = {10.1002/j.1538-7305.1970.tb01770},
+  owner     = {Vincent},
+  timestamp = {2012.07.15},
+}
+
 @InProceedings{Kessler1997,
   author    = {Kessler, B. and Numberg, G. and Schütze, H.},
   title     = {Automatic detection of text genre},
@@ -24442,6 +24515,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4236/jss.2021.93003},
   owner     = {Vincent},
   timestamp = {2021.03.27},
+}
+
+@TechReport{Khanafiah2004,
+  author      = {Khanafiah, D. and Situngkir, H.},
+  title       = {Social Balance Theory - Revisiting Heider's Balance Theory for many agents},
+  institution = {Bandung Fe Institute},
+  year        = {2004},
+  owner       = {Vincent},
+  timestamp   = {2015.10.09},
+  url         = {http://cogprints.org/3641/},
 }
 
 @Article{Khatoonabadi2009,
@@ -25236,6 +25319,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/n16-1099},
   owner     = {Vincent},
   timestamp = {2022.06.28},
+}
+
+@InProceedings{Kobayashi2020,
+  author    = {Kobayashi, T. and Matsushita, M.},
+  title     = {Search for similar characters by adding or subtracting personality and appearance factors},
+  booktitle = {ARG SIG-WI2},
+  year      = {2020},
+  volume    = {16},
+  pages     = {106-111},
+  owner     = {Vincent},
+  timestamp = {2022.11.26},
+  url       = {https://www.sigwi2.org/},
 }
 
 @Book{Koch2009,
@@ -29365,6 +29460,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://cveu.github.io/2022/papers/0016.pdf},
 }
 
+@InProceedings{Liu2022ad,
+  author    = {Liu, C. and Wang, R. and Jiang, J. and Li, Y. and Huang, F.},
+  title     = {Dial2vec: Self-Guided Contrastive Learning of Unsupervised Dialogue Embeddings},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.11.26},
+  url       = {https://arxiv.org/abs/2210.15332},
+}
+
 @Article{LoBue2015,
   author    = {LoBue, V. and Thrasher, C.},
   title     = {The Child Affective Facial Expression ({CAFE}) set: validity and reliability from untrained adults},
@@ -31595,6 +31700,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Matsuo2004,
+  author    = {Matsuo, Y. and Hamasaki, M. and Mori, J. and Takeda, H. and Hasida, K.},
+  title     = {Ontological consideration on human relationship vocabulary for FOAF},
+  booktitle = {1st Workshop on Friend of a Friend, Social Networking and Semantic Web},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2022.11.26},
+  url       = {https://www.w3.org/2001/sw/Europe/events/foaf-galway/papers/fp/ontological_consideration_on_human_relationship_vocabulary/},
+}
+
 @InProceedings{Matsuo2006,
   author    = {Matsuo, Y. and Mori, J. and Hamasaki, M. and Ishida, K. and Nishimura, T. and Takeda, H. and Hasida, K. and Ishizuka, M.},
   title     = {POLYPHONET: an advanced social network extraction system from the Web},
@@ -33142,6 +33257,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.09},
   url       = {https://www.cambridge.org/fr/academic/subjects/computer-science/algorithmics-complexity-computer-algebra-and-computational-g/probability-and-computing-randomization-and-probabilistic-techniques-algorithms-and-data-analysis-2nd-edition},
+}
+
+@InProceedings{Miyagawa2022,
+  author    = {Miyagawa, K. and Morino, Y. and Matsushita, M.},
+  title     = {Interactive Visualization of Comic Character Correlation Diagrams for Understanding Character Relationships and Personalities},
+  booktitle = {International Conference on Information Integration and Web},
+  year      = {2022},
+  volume    = {13635},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {561-567},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-21047-1_50},
+  owner     = {Vincent},
+  timestamp = {2022.11.24},
 }
 
 @Electronic{Miz2018,
@@ -36334,6 +36463,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.01.18},
 }
 
+@InProceedings{OstroumovaProkhorenkova2016,
+  author    = {Ostroumova Prokhorenkova, L. and Prałat, P. and Raigorodskii, A.},
+  title     = {Modularity of Complex Networks Models},
+  booktitle = {International Workshop on Algorithms and Models for the Web-Graph},
+  year      = {2016},
+  volume    = {10088},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {115-126},
+  doi       = {10.1007/978-3-319-49787-7_10},
+  owner     = {Vincent},
+  timestamp = {2016.11.15},
+}
+
 @InProceedings{Otake2020,
   author    = {Otake, T. and Yokoi, S. and Inoue, N. and Takahashi, R. and Kuribayashi, T. and Inui, K.},
   title     = {Modeling Event Salience in Narratives via Barthes' Cardinal Functions},
@@ -36910,6 +37052,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1140/epjds/s13688-015-0039-z},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Park2018,
+  author    = {Park, B. and Ibayashi, K. and Matsushita, M.},
+  title     = {Classifying personalities of comic characters based on egograms},
+  booktitle = {4th International Symposium on Affective Science and Engineering},
+  year      = {2018},
+  pages     = {B3-2},
+  doi       = {10.5057/isase.2018-C000029},
+  owner     = {Vincent},
+  timestamp = {2022.11.26},
 }
 
 @Book{Parker1987,
@@ -38271,6 +38424,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://press.princeton.edu/books/paperback/9780691208411/trust-in-numbers},
+}
+
+@Article{Porter2009,
+  author    = {Porter, M. A. and Onnela, J.-P. and Mucha, J. P.},
+  title     = {Communities in Networks},
+  journal   = {Notices of the American Mathematical Society},
+  year      = {2009},
+  volume    = {56},
+  number    = {9},
+  pages     = {1082},
+  owner     = {Vincent},
+  review    = {arXiv: http://arxiv.org/abs/0902.3788},
+  timestamp = {2010.06.03},
+  url       = {http://www.ams.org/notices/200909/rtx090901082p.pdf},
 }
 
 @InCollection{Posfay1998,
@@ -44959,6 +45126,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1521/jscp.23.6.857.54803},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Srinivasan2022,
+  author    = {Srinivasan, V. and Power, A.},
+  title     = {Character Extraction and Character Type Identification from Summarised Story Plots},
+  journal   = {Journal of Computer-Assisted Linguistic Research},
+  year      = {2022},
+  volume    = {6},
+  pages     = {19-41},
+  doi       = {10.4995/jclr.2022.17835},
+  owner     = {Vincent},
+  timestamp = {2022.11.25},
 }
 
 @InProceedings{Srivastava2016,
